# Human-Robot-Shared-Autonomy

./: Readme.md  data1.tar.xz  data2.tar.xz
ati_force_sensor/: CMakeLists.txt  package.xml
ati_force_sensor/include/: data.h  empty.h  empty1.h  myATI.h  stiffnessControl.h
ati_force_sensor/src/: auto_calibre_gravity.cpp  auto_calibre_gravity_init_down.cpp  compensated_force.cpp  myATI.cpp  offlineCompen.cpp  rigidbody_translation.cpp  stiffnesscontrol.cpp  testGravityCompensation.cpp  test_ATI.cpp  test_auto_gravity_compensation.cpp  test_auto_gravity_compensation0511.cpp  test_auto_gravity_compensation_down_init.cpp  test_readbias.cpp
ati_force_sensor/src/MCC_ATI/: ftconfig.h
ati_force_sensor/src/calibrationfiles/: FT18913.cal  FT20571.cal  FT20572.cal  archFT35045.cal  archFT35046.cal  forcebias.txt
ati_force_sensor/src/robotController/: robotController.cpp
data/: dmp0_tmp.txt  dmp0_tmp_12.txt  dmp0_tmp_18.txt  dmp0_tmp_20.txt  dmp1_tmp.txt  dmp2_tmp.txt  shared_control1_1.txt  shared_control1_2.txt  shared_control1_3.txt  shared_control2_1.txt  shared_control2_2.txt  shared_control2_3.txt  shared_control3_1.txt  shared_control3_2.txt  shared_control3_3.txt  shared_control_n1_1.txt  shared_control_n1_2.txt  shared_control_n1_3.txt  shared_control_n2_1.txt  shared_control_n2_2.txt  shared_control_n2_3.txt  shared_control_n3_1.txt  shared_control_n3_2.txt  shared_control_n3_3.txt  shared_control_syb.txt
data/admmitance/: 1_1.txt  2_1.txt  2_2.txt  2_3.txt  3_1.txt  3_2.txt  4_1.txt  4_2.txt  4_3.txt
data/sc/: .txt  g_1.txt  g_1obs.txt  r_1.txt  r_1_4.txt  test0518.txt  video_test_r.txt
dmp/: CMakeLists.txt
dmp/data/: dealdata01.txt  dealdata02.txt  dealdata03.txt  dealdata11.txt  dealdata12.txt  dealdata13.txt  dealdata21.txt  dealdata22.txt  dealdata23.txt  dmp01.xml  dmp02.xml  dmp03.xml  dmp11.xml  dmp12.xml  dmp13.xml  dmp21.xml  dmp22.xml  dmp23.xml  my_dmp_ws.txt  my_dmp_ws_tmp.txt  my_dmp_ws_tmp2.txt  prob0.txt  prob1.txt  prob2.txt
dmp/include/: confidence.h  dtw.h  my_dmp.h
dmp/include/dmp/: dmp.h  function_approx.h
dmp/launch/: dmp.launch
dmp/msg/: DMPPointStamp.msg
dmp/nodes/: arbitration.cpp  arbitration（复件）.cpp  classify.cpp  classify_online.cpp  classify_test.cpp  dmp_gen.cpp  dmp_learn.cpp  dmp_robot.cpp  dmp_server.cpp  dmp_step.cpp  dmp_test.cpp  dmp_with_wsc.cpp  dtw_test.cpp  my_dmp_test.cpp  mydmp_wsc.cpp  mydmp_wsc（复件）.cpp  traj_ur.cpp  traj_ur_wsc.cpp
dmp/src/: confidance.cpp  dmp.cpp  dtw.cpp  my_dmp.cpp  radial_approx.cpp
dmp/srv/: GetDMPStepPlan.srv
gmm/: CMakeLists.txt  package.xml
gmm/data/: GMM.xml  GMM_1231.xml  GMM_7.xml
gmm/include/: gmm.h
gmm/launch/: gmm_test.launch
gmm/nodes/: gmm_test.cpp
gmm/src/: gmm.cpp
gmm/srv/: GetConstraint.srv
my_controller/: CMakeLists.txt  package.xml
my_controller/include/readImage/: loadModel.h  readImage.h
my_controller/include/robotController/: robotController.h
my_controller/include/robotController.back/: robotController.h
my_controller/scripts/: gripper.py  gripper_node.py  io_demo.py  io_interface.py
my_controller/src/: calibration2d.cpp  detect_test.cpp  dmp_step.cpp  get_pos.cpp  grasp_cubic.cpp  readChess.cpp  test.cpp
my_controller/src/moveIt/: collisionTest.cpp  simpleTest.cpp
my_controller/src/readImage/: loadCameraImage.cpp  readImage.cpp
my_controller/src/robotController/: robotController.cpp  robotControllerTest.cpp
my_controller/src/robotController.back/: robotController.cpp  robotControllerTest.cpp
robot_kin/: CMakeLists.txt  package.xml
robot_kin/include/: jacobian.h  mymath.hpp  ur3e_kin.hpp
robot_kin/src/: jacobian.cpp  mymath.cpp  ur3e_kin.cpp  ur_kin.cpp
socket/: CMakeLists.txt
socket/include/: pinv.h  robotXB4.h
socket/include/mySocket/: mySocket.h
socket/node/: socket_node.cpp  socket_test.cpp
socket/src/: mySocket.cpp  pinv.cpp  robotXB4.cpp
ur_modern_driver/launch/: ur5_bringup.launch  ur5_ros_control.launch
uu_robot/config/: uu_robot.rviz
